bat.string1.lessons.bat.string1.StringX.scala.error
stringX:5: error: ';' expected but ',' found.
 	var i=0, j=str.length()
               ^